--- a/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
+++ b/src/app/layout/automation/make-strategy-execution/make-strategy-execution.component.html
@@ -139,15 +139,15 @@
 
     </div>
     <div class="row">
-        <div *ngIf="clients.length > 1" class="col-md-6">
+        <div *ngIf="exchangeUserSelectionList.length > 1" class="col-md-6">
 
             <div class="form-group">
                 <label>Users</label>
 
-                <div class="checkbox" *ngFor="let client of clients">
+                <div class="checkbox" *ngFor="let exchangeUserSelection of exchangeUserSelectionList">
                     <label>
-                        <input type="checkbox" name="selectedClients" [value]="true"
-                               [(ngModel)]="client.checked"> {{ client.client.name }}
+                        <input type="checkbox" name="selectedExchangeUsers" [value]="true"
+                               [(ngModel)]="exchangeUserSelection.checked"> {{ exchangeUserSelection.exchangeUser.name }}
                     </label>
                 </div>
             </div>
