--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -1,19 +1,19 @@
-<div [@routerTransition]>
+<div>
     <app-page-header [heading]="'Wallets'" [icon]="'fa-money'"></app-page-header>
     <ng-container>
         <div *ngFor="let exchangeUser of exchangeUsers" class="card mb-3 bg-dark">
             <div class="card-header d-flex flex-column">
                 <div class="d-flex flex-row mb-2">
                     <h3>{{ exchangeUser.name }}</h3>
-                    <div class="text-muted ml-auto mr-3">Last amounts refresh: {{ getLastWalletRefreshTime(exchangeUser) |
-                        date: 'y-MM-dd HH:mm:ss' || '-' }}</div>
+                    <div class="text-muted ml-auto mr-3"><small>Last amounts refresh: {{ getLastWalletRefreshTime(exchangeUser) |
+                        date: 'y-MM-dd HH:mm:ss' || '-' }}</small></div>
                     <button class="btn btn-info" style="min-width: 170px;" (click)="fetchExchangeBalancesForExchangeUser(exchangeUser)" [disabled]="pending">
                         <i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh amounts
                     </button>
                 </div>
                 <div class="d-flex flex-row">
-                    <div class="text-muted ml-auto mr-3">Last prices refresh: {{ getLastPriceRefreshTime() |
-                        date: 'y-MM-dd HH:mm:ss' || '-' }}</div>
+                    <div class="text-muted ml-auto mr-3"><small>Last prices refresh: {{ getLastPriceRefreshTime() |
+                        date: 'y-MM-dd HH:mm:ss' || '-' }}</small></div>
                     <button class="btn btn-info" style="min-width: 170px;" (click)="fetchPrices()" [disabled]="pendingPriceRefresh">
                         <i class="fa fa-refresh" [class.is-pending]="pendingPriceRefresh"></i> Refresh prices
                     </button>
@@ -33,14 +33,14 @@
                 </div>
             </div>
             <ng-container *ngFor="let exchangeBalance of exchangeBalancesForExchangeUser(exchangeUser)">
-                <h4>{{ exchangeBalance.exchangeName }}</h4>
+                <h4 class="m-3">{{ exchangeBalance.exchangeName }}</h4>
                 <span *ngIf="exchangeBalance.errorMessage != null" class="badge badge-warning">
                     {{ exchangeBalance.errorMessage }}
                 </span>
                 <span *ngIf="exchangeBalance.currencyBalances.length == 0 && exchangeBalance.errorMessage == null"
-                      class="badge badge-secondary">No currencies hold</span>
+                      class="alert">No currencies hold</span>
                 <table *ngIf="exchangeBalance.currencyBalances.length > 0 && exchangeBalance.errorMessage == null"
-                       class="card-body table table-hover">
+                       class="card-body table table-sm table-dark table-hover">
                     <thead>
                     <tr>
                         <th>Currency</th>
