--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -1,5 +1,12 @@
 <div>
-    <app-page-header [heading]="'Wallets'" [icon]="'fa-money'"></app-page-header>
+    <ul class="nav">
+        <li class="nav-item">
+            <h2 class="page-header text-light">Wallets</h2>
+        </li>
+        <div class="nav-item btn-group ml-auto" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-outline-light" style="min-width: 130px" (click)="flipBalancesViewType()">{{ showBalancesPerExchange ? 'Per Exchange' : 'Total'}}</button>
+        </div>
+    </ul>
     <ng-container>
         <div *ngFor="let exchangeUser of exchangeUsers" class="card mb-3 bg-dark">
             <div class="card-header d-flex flex-column">
@@ -32,13 +39,13 @@
                     1 <i class="fa fa-btc"></i> = <i class="fa fa-usd"></i> <span class="sensitive-data">{{ get1BtcValue() | number : '1.2' || '-' }}</span>
                 </div>
             </div>
-            <ng-container *ngFor="let exchangeBalance of exchangeBalancesForExchangeUser(exchangeUser)">
+            <ng-container *ngFor="let exchangeBalance of exchangeUser.exchangeBalances">
                 <h4 class="m-3">{{ exchangeBalance.exchangeName }}</h4>
                 <span *ngIf="exchangeBalance.errorMessage != null" class="badge badge-warning">
                     {{ exchangeBalance.errorMessage }}
                 </span>
                 <span *ngIf="exchangeBalance.currencyBalances.length == 0 && exchangeBalance.errorMessage == null"
-                      class="alert">No currencies hold</span>
+                      class="alert">No currencies held</span>
                 <table *ngIf="exchangeBalance.currencyBalances.length > 0 && exchangeBalance.errorMessage == null"
                        class="card-body table table-sm table-dark table-hover">
                     <thead>
