TOGGLED OFF Add health panel with hardcoded usage

--- a/src/app/layout/health/health.component.html
+++ b/src/app/layout/health/health.component.html
@@ -1,3 +1,4 @@
 <p>
-  health works!
+    <health-panel [healthy]="false" [icon]="'far fa-heartbeat'" [count]="124" [label]="'New Orders!'" ></health-panel>
+    <health-panel [healthy]="true" [icon]="'fas fa-heartbeat'" [count]="26" [label]="'New Comments!'" ></health-panel>
 </p>
