--- a/src/app/layout/health/health-panel/health-panel.component.html
+++ b/src/app/layout/health/health-panel/health-panel.component.html
@@ -1,19 +1,23 @@
 <div class="card text-white bg-{{healthy === true? 'success' : 'danger'}} m-2" style="min-width: 300px">
     <div class="card-header">
-        <div class="row" >
+        <div class="row">
             <div class="col" style="max-width: 110px">
-                <i class="fa {{icon}} fa-5x"></i>
+                <i class="fa far fa-heartbeat fa-5x"></i>
             </div>
             <div class="col text-left">
-                <div class="d-block">{{label}}</div>
+                <div class="d-block display-4">{{exchange}}</div>
             </div>
         </div>
     </div>
-    <!--TODO Add health details-->
-    <!--<div class="card-footer">-->
-        <!--<span class="float-left">View Details {{data}}</span>-->
-        <!--<a href="javascript:void(0)" class="float-right card-inverse">-->
-            <!--<span ><i class="fa fa-arrow-circle-right"></i></span>-->
-        <!--</a>-->
-    <!--</div>-->
+    <div class="card-body pt-0 pb-0" [@myAnimation]="this.slide">
+        <div class="pt-3 pb-3">
+            <div *ngFor="let item of details | keyvalue">
+                {{item.key}}: {{item.value === true ? 'OK' : item.value === false ? 'Bad' : 'Unknown'}}
+            </div>
+        </div>
+    </div>
+    <div class="card-footer">
+        <span class="float-left"
+              (click)="this.showDetails =! this.showDetails; this.toggle();">{{this.showDetails ? 'Hide details' : 'View Details'}}</span>
+    </div>
 </div>
