--- a/src/app/layout/exchange-users/exchange-users.component.html
+++ b/src/app/layout/exchange-users/exchange-users.component.html
@@ -1,15 +1,16 @@
-<app-page-header [heading]="'Exchange users'" [icon]="'fa-users'"></app-page-header>
+<app-page-header [heading]="'Users & API keys'" [icon]="'fa-users'"></app-page-header>
 
 <div class="card mb-3 bg-dark">
-    <div class="card-header">Exchange users and keys</div>
+    <div class="card-header">API key of each exchange user which allow you to group the keys</div>
     <div *ngIf="!isLoading && exchangeUsers.length == 0" class="alert alert-primary">
-        Start with adding your first exchange user, that might be your name and then assign exchange keys
+        Start with adding your first exchange user for grouping API keys, eg your name. Then assign API keys for each
+        exchange
     </div>
     <table class="card-body table">
         <thead>
         <tr>
-            <th>Name</th>
-            <th>Exchange keys</th>
+            <th>User name</th>
+            <th>API keys</th>
             <th>Actions</th>
         </tr>
         </thead>
@@ -20,15 +21,16 @@
             </td>
             <td>
                   <span class="badge" *ngFor="let exchangeName of getExchangesNamesOfExchangeUser(exchangeUser)"
-                        [class.badge-light]="!isExchangeUserExchangeSelected(exchangeUser, exchangeName)"
-                        [class.badge-warning]="isExchangeUserExchangeSelected(exchangeUser, exchangeName)"
-                        (click)="onSelectExchangeUserExchangeName(exchangeUser, exchangeName)">
-                    {{ exchangeName }}
-                  </span>
+                        [class.badge-danger]="isApiKeyNotWorking(exchangeUser, exchangeName)">
+                        {{ exchangeName }}
+                </span>
             </td>
             <td>
-                <button [routerLink]="['/exchange-users/edit', exchangeUser.id]" class="btn btn-success btn-sm">Edit</button>
-                <button (click)="exchangeUserDelete.destroy(exchangeUser)" class="btn btn-danger btn-sm">Delete</button>
+                <button [routerLink]="['/exchange-users/edit', exchangeUser.id]" class="btn btn-success btn-sm">Edit
+                </button>
+                <button (click)="exchangeUserDelete.deleteExchangeUserWithConfirmation(exchangeUser)"
+                        class="btn btn-danger btn-sm">Delete user & keys
+                </button>
             </td>
         </tr>
 
@@ -36,11 +38,6 @@
     </table>
 </div>
 
-<button class="btn btn-success" [disabled]="selectedExchangeNamesWithExchangeUsers.length == 0"
-        (click)="makeOrder.generateFor(selectedExchangeNamesWithExchangeUsers)">Make order
-</button>
 <a routerLink="/exchange-users/create" class="btn btn-info">Add user</a>
 
 <app-exchange-user-delete #exchangeUserDelete (refresh)="loadData()"></app-exchange-user-delete>
-
-<app-make-order #makeOrder (success)="selectedExchangeNamesWithExchangeUsers = []"></app-make-order>
