--- a/src/app/layout/exchange-users/exchange-users.component.html
+++ b/src/app/layout/exchange-users/exchange-users.component.html
@@ -1,7 +1,7 @@
 <app-page-header [heading]="'Users & API keys'" [icon]="'fa-users'"></app-page-header>
 
 <div class="card mb-3 bg-dark">
-    <div class="card-header">API key of each exchange user which allow you to group the keys</div>
+    <div class="card-header">API <i class="fa fa-key"></i> key of each user which allow you to group the keys</div>
     <div *ngIf="!isLoading && exchangeUsers.length == 0" class="alert alert-primary">
         Start with adding your first exchange user for grouping API keys, eg your name. Then assign API keys for each
         exchange
@@ -20,17 +20,22 @@
                 {{ exchangeUser.name }}
             </td>
             <td>
-                  <span class="badge" *ngFor="let exchangeName of getExchangesNamesOfExchangeUser(exchangeUser)"
-                        [class.badge-danger]="isApiKeyNotWorking(exchangeUser, exchangeName)">
-                        {{ exchangeName }}
+                  <span class="badge" *ngFor="let exchange of getExchangesOfExchangeUser(exchangeUser)"
+                        [class.badge-danger]="isApiKeyNotWorking(exchangeUser, exchange)"
+                        [class.badge-success]="isApiKeyWorking(exchangeUser, exchange)">
+                        {{ exchange.name }}
                 </span>
             </td>
-            <td>
-                <button [routerLink]="['/exchange-users/edit', exchangeUser.id]" class="btn btn-success btn-sm">Edit
+            <td class="actions">
+                <button [routerLink]="['/exchange-users/edit', exchangeUser.id]" class="btn btn-default btn-sm">Edit <i
+                    class="fa fa-user"></i> <i class="fa fa-key"></i>
                 </button>
                 <button (click)="exchangeUserDelete.deleteExchangeUserWithConfirmation(exchangeUser)"
-                        class="btn btn-danger btn-sm">Delete user & keys
+                        class="btn btn-danger btn-sm">Delete <i class="fa fa-user"></i> <i class="fa fa-key"></i>
                 </button>
+                <button (click)="fetchExchangeUserKeysCapability(exchangeUser)"
+                        [disabled]="isFetchingKeysCapability(exchangeUser)"
+                        class="btn btn-sm">Check <i class="fa fa-key"></i></button>
             </td>
         </tr>
 
@@ -38,6 +43,6 @@
     </table>
 </div>
 
-<a routerLink="/exchange-users/create" class="btn btn-info">Add user</a>
+<a routerLink="/exchange-users/create" class="btn btn-info">Add <i class="fa fa-user-plus"></i></a>
 
 <app-exchange-user-delete #exchangeUserDelete (refresh)="loadData()"></app-exchange-user-delete>
