--- a/src/app/layout/health/health-panel/health-panel.component.html
+++ b/src/app/layout/health/health-panel/health-panel.component.html
@@ -1,23 +1,28 @@
-<div class="card text-white bg-{{healthy === true? 'success' : 'danger'}} m-2" style="min-width: 300px">
+<div class="card text-white bg-{{exchangeHealth.isHealthy === true? 'success' : 'danger'}} m-2"
+     style="min-width: 300px">
     <div class="card-header">
         <div class="row">
             <div class="col" style="max-width: 110px">
                 <i class="fa far fa-heartbeat fa-5x"></i>
             </div>
             <div class="col text-left">
-                <div class="d-block display-4">{{exchange}}</div>
+                <div class="d-block display-4">{{exchangeHealth.exchangeName}}</div>
             </div>
         </div>
     </div>
-    <div class="card-body pt-0 pb-0" [@myAnimation]="this.slide">
+    <div class="card-body pt-0 pb-0" [@myAnimation]="slide">
         <div class="pt-3 pb-3">
-            <div *ngFor="let item of details | keyvalue">
+            <div *ngFor="let item of exchangeHealth.details | keyvalue">
                 {{item.key}}: {{item.value === true ? 'OK' : item.value === false ? 'Bad' : 'Unknown'}}
             </div>
+            <div>Last check: {{exchangeHealth.timestamp | date: 'y-MM-dd HH:mm:ss' }}</div>
         </div>
     </div>
     <div class="card-footer">
-        <span class="float-left"
-              (click)="this.showDetails =! this.showDetails; this.toggle();">{{this.showDetails ? 'Hide details' : 'View Details'}}</span>
+        <span (click)="toggleDetailsVisibility()" class="toggle-details-visibility">
+                <i *ngIf="showDetails" class="fa fa-angle-double-up"></i>
+                <i *ngIf="!showDetails" class="fa fa-angle-double-down"></i>
+                Details
+        </span>
     </div>
 </div>
