Rename automation to 'Trading automation' in UI and packages

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -12,8 +12,8 @@
             <i class="fa fa-fw fa-money"></i>&nbsp;{{ 'Wallets' | translate }}
         </a>
 
-        <a routerLink="/automation" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-magic"></i>&nbsp;{{ 'Automation' | translate }}
+        <a routerLink="/trading-automation" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-line-chart"></i>&nbsp;{{ 'Trading automation' | translate }}
         </a>
 
         <a routerLink="/orders" [routerLinkActive]="['router-link-active']" class="list-group-item">
