--- a/src/app/layout/trading-automation/add-strategy-execution/add-strategy-execution.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/add-strategy-execution.component.html
@@ -1,4 +1,4 @@
-<app-page-header [heading]="'Add strategy'" [icon]="'fa-magic'"></app-page-header>
+<app-page-header [heading]="'Add trading strategy'" [icon]="'fa-magic'"></app-page-header>
 <div class="alert alert-primary">
     You can find description of strategies here:
     <a class="badge badge-primary" href="http://bit.ly/2LeSq1b" target="_blank">en</a> |
@@ -16,7 +16,7 @@
         Creating strategies in progress
     </div>
     <div *ngIf="finishedCreatingStrategies">
-        <a [routerLink]="'/automation'" class="btn btn-success">
+        <a [routerLink]="'/trading-automation'" class="btn btn-success">
             Go back
         </a>
     </div>
@@ -162,7 +162,7 @@
                     [disabled]="!canMakeStrategyExecution()">
                 Add strategy
             </button>
-            <a [routerLink]="'/automation'" class="btn btn-secondary">
+            <a [routerLink]="'/trading-automation'" class="btn btn-secondary">
                 Cancel
             </a>
         </div>
