--- a/src/app/layout/trading-automation/trading-strategies.component.html
+++ b/src/app/layout/trading-automation/trading-strategies.component.html
@@ -1,12 +1,12 @@
-<app-page-header [heading]="'Automation'" [icon]="'fa-magic'"></app-page-header>
+<app-page-header [heading]="'Trading strategies'" [icon]="'fa-magic'"></app-page-header>
 <div class="alert alert-primary">
-    Currently supported exchanges for automation: {{ supportedExchanges.join() }}
+    Currently supported exchanges for trading: {{ supportedExchanges.join() }}
 </div>
 <div class="card mb-3 bg-dark" *ngFor="let exchange of exchanges">
     <div class="card-header">
         <div class="row justify-content-between align-items-center px-2">
             <span>{{ exchange.name }}</span>
-            <a *ngIf="isSupported(exchange.name)" [routerLink]="['/automation/make-strategy-execution', exchange.name]" class="btn btn-success">
+            <a *ngIf="isSupported(exchange.name)" [routerLink]="['/trading-automation/add-strategy-execution', exchange.name]" class="btn btn-success">
                 Add strategy
             </a>
             <button *ngIf="!isSupported(exchange.name)" class="btn btn-secondary" disabled>
