Add change user account password form plus redirect if user should change password

--- a/src/app/layout/settings/two-factor-authentication/two-factor-authentication.component.html
+++ b/src/app/layout/settings/two-factor-authentication/two-factor-authentication.component.html
@@ -3,8 +3,10 @@
     <div class="card-body">
         <div class="row">
             <div class="col is-2 pr-0" *ngIf="twoFactorAuthenticationState === 'enabled'">
-                <h5>2-Step Verification is enabled. Input the 6-digits code from authenticator to disable</h5>
-                <input [(ngModel)]="current2FACode" type="text" class="form-control">
+                <div class="form-group">
+                    <label>2-Step verification is enabled. Input the 6-digits code from authenticator to disable</label>
+                    <input [(ngModel)]="current2FACode" type="text" class="form-control">
+                </div>
                 <button [disabled]="operationInProgress || ('' + current2FACode) == 'null'" type="submit"
                         class="btn btn-danger"
                         (click)="disableTwoFactorAuthentication()">
@@ -19,13 +21,16 @@
                 </button>
             </div>
             <div class="col is-2 pr-0" *ngIf="twoFactorAuthenticationState === 'generateSecretCode'">
-                <h5>Your secret code</h5>
-                <img [src]="secret2FACodeQrCodeImageUrl"/>
-                <input [value]="secret2FACode" #secretCodeInput readonly type="text" class="form-control">
+                <div class="form-group">
+                    <label>Your secret code</label>
+                    <img [src]="secret2FACodeQrCodeImageUrl"/>
+                    <input [value]="secret2FACode" #secretCodeInput readonly type="text" class="form-control">
+                </div>
                 <button (click)="copyInputToClipboard(secretCodeInput)" class="btn btn-info">Copy</button>
-
-                <h5>Input the 6-digits code from authenticator</h5>
-                <input [(ngModel)]="current2FACode" type="text" class="form-control">
+                <div class="form-group">
+                    <label>Input the 6-digits code from authenticator</label>
+                    <input [(ngModel)]="current2FACode" type="text" class="form-control">
+                </div>
                 <button (click)="enableTwoFactorAuthentication()" [disabled]="operationInProgress"
                         class="btn btn-success">Enable two-factor authentication
                 </button>
