--- a/src/app/layout/settings/settings.component.html
+++ b/src/app/layout/settings/settings.component.html
@@ -1,2 +1,3 @@
 <app-page-header [heading]="'Settings'" [icon]="'fa-cog'"></app-page-header>
+<app-user-account-password [shouldChangePassword]="shouldChangePassword"></app-user-account-password>
 <app-two-factor-authentication></app-two-factor-authentication>
