Show only exchanges supported for trading in trading view

--- a/src/app/layout/trading-automation/add-strategy-execution/add-strategy-execution.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/add-strategy-execution.component.html
@@ -29,7 +29,7 @@
 
 
             <div class="form-group">
-                <label>Exchange Name</label>
+                <label>Exchange name</label>
 
                 <div class="form-control">
                     <strong>{{ exchangeName }}</strong>
@@ -143,7 +143,7 @@
         <div *ngIf="exchangeUserSelectionList.length > 1" class="col-md-6">
 
             <div class="form-group">
-                <label>Users</label>
+                <label>Select users</label>
 
                 <div class="checkbox" *ngFor="let exchangeUserSelection of exchangeUserSelectionList">
                     <label>
