--- a/src/app/layout/trading-automation/trading-strategies.component.html
+++ b/src/app/layout/trading-automation/trading-strategies.component.html
@@ -1,15 +1,13 @@
-<app-page-header [heading]="'Trading strategies'" [icon]="'fa-magic'"></app-page-header>
-<div class="alert alert-primary">
-    Currently supported exchanges for trading: {{ supportedExchanges.join() }}
-</div>
-<div class="card mb-3 bg-dark" *ngFor="let exchange of exchanges">
+<app-page-header [heading]="'Manage automated trading strategies'" [icon]="'fa-magic'"></app-page-header>
+<div class="card mb-3 bg-dark" *ngFor="let exchange of getExchangesSupportedForTrading()">
     <div class="card-header">
         <div class="row justify-content-between align-items-center px-2">
             <span>{{ exchange.name }}</span>
-            <a *ngIf="isSupported(exchange.name)" [routerLink]="['/trading-automation/add-strategy-execution', exchange.name]" class="btn btn-success">
+            <a *ngIf="isSupportedForTrading(exchange.name)"
+               [routerLink]="['/trading-automation/add-strategy-execution', exchange.name]" class="btn btn-success">
                 Add strategy
             </a>
-            <button *ngIf="!isSupported(exchange.name)" class="btn btn-secondary" disabled>
+            <button *ngIf="!isSupportedForTrading(exchange.name)" class="btn btn-secondary" disabled>
                 Add strategy
             </button>
         </div>
@@ -30,7 +28,7 @@
             <td>{{ getExchangeUserNameById(strategyExecution.exchangeUserId) }}</td>
             <td>{{ strategyExecution.strategyName }}</td>
             <td>{{ strategyExecution.baseCurrencyCode }}/{{ strategyExecution.counterCurrencyCode }}</td>
-            <td >{{ strategyExecution.strategyParameters | json }}</td>
+            <td>{{ strategyExecution.strategyParameters | json }}</td>
             <td *ngIf="strategyExecution.orders.length > 0">{{ strategyExecution.orders | json }}</td>
             <td *ngIf="strategyExecution.orders.length == 0">-</td>
             <td>
