--- a/src/app/layout/trading-automation/add-strategy-execution/add-strategy-execution.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/add-strategy-execution.component.html
@@ -1,8 +1,6 @@
 <app-page-header [heading]="'Add trading strategy'" [icon]="'fa-magic'"></app-page-header>
 <div class="alert alert-primary">
-    You can find description of strategies here:
-    <a class="badge badge-primary" href="http://bit.ly/2LeSq1b" target="_blank">en</a> |
-    <a class="badge badge-primary" href="http://bit.ly/2rWp6nh" target="_blank">pl</a>
+    <a href="http://bit.ly/2VmVCAw" target="_blank">Take a look at how strategies work</a>
 </div>
 <div *ngIf="creatingStrategiesInProgress || finishedCreatingStrategies">
     <div *ngFor="let strategyCreatedFor of strategiesCreatedFor" class="alert alert-success">
