--- a/src/app/layout/trading-automation/add-strategy-execution/sell-higher-and-higher-specific-parameters/sell-higher-and-higher-specific-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/sell-higher-and-higher-specific-parameters/sell-higher-and-higher-specific-parameters.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-6">
         <div class="form-group">
-            <label for="minSellPrice">Min sell price</label>
+            <label for="maxBuyPrice">Min sell price</label>
             <input name="maxBuyPrice" type="number" class="form-control" value="0.0" (input)="onMinSellPrice($event.target)"
                    required>
         </div>
@@ -10,7 +10,7 @@
         <div class="form-group">
             <label for="growToSellNextRelativePercent">Grow to sell next</label>
             <div class="input-group">
-                <input name="dropToBuyNextRelativePercent" class="form-control" type="number" min="0.1" max="50"
+                <input name="growToSellNextRelativePercent" class="form-control" type="number" min="0.1" max="50"
                        value="0.5" step="0.1" (input)="onGrowToSellNextRelativePercent($event.target)">
                 <div class="input-group-append">
                     <span class="input-group-text">%</span>
