--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
                 <button type="submit" class="btn rounded-btn" [disabled]="loginForm.invalid"> Log in</button>
                 <!-- <a class="btn rounded-btn" [routerLink]="['/dashboard']"> Log in </a> -->
                 <!--&nbsp;-->
-                <!-- <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a> -->
+                 <a class="btn register rounded-btn" href="http://bit.ly/2Wu5rtd">Register</a>
             </form>
         </div>
     </div>
