Add minSellPrice to SellWhenSecondCurrencyGrows strategy

--- a/src/app/layout/trading-automation/add-strategy-execution/sell-when-second-currency-grows-parameters/sell-when-second-currency-grows-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/sell-when-second-currency-grows-parameters/sell-when-second-currency-grows-parameters.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
-            <label for="pricesTriggeringSale">Prices triggering sales, eg 4500, 5000.5</label>
+            <label for="pricesTriggeringSale">Prices of second currency pair triggering sales, eg 4500, 5000.5</label>
             <input name="pricesTriggeringSale" class="form-control"
                    pattern ="/^[0-9 _ ,]*$/"
                    (input)="onPricesTriggeringSale($event.target)"
@@ -10,7 +10,14 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
+        <div class="form-group">
+            <label for="maxBuyPrice">Min sell price</label>
+            <input name="maxBuyPrice" type="number" class="form-control" value="0.0" (input)="onMinSellPrice($event.target)"
+                   required>
+        </div>
+    </div>
+    <div class="col-md-6">
         <div class="form-group">
             <label for="secondCurrencyPairToWatch">Second currency pair to watch, eg BTC/USDT</label>
             <div class="input-group">
