Add exchangeSpecificKeyParameters for kucoin

--- a/src/app/layout/exchange-users/exchange-user-edit/exchange-user-edit.component.html
+++ b/src/app/layout/exchange-users/exchange-user-edit/exchange-user-edit.component.html
@@ -38,6 +38,13 @@
                                 <button (click)="deleteExchangeKey(exchange.id)" class="btn btn-danger btn-sm">
                                     Delete
                                 </button>
+
+                                <fieldset *ngFor="let exchangeSpecificKeyParameterConfiguration of exchangeSpecificKeyParametersConfiguration.get(exchange.name)" class="form-group"
+                                          [ngModelGroup]="exchange.id">
+                                    <label>{{ exchangeSpecificKeyParameterConfiguration.displayLabel }}</label>
+                                    <input class="form-control" name="{{ 'exchangeSpecific' + exchangeSpecificKeyParameterConfiguration.name }}" ngModel>
+                                </fieldset>
+
                                 <fieldset *ngIf="exchange.name === 'bitstamp'" class="form-group"
                                           [ngModelGroup]="exchange.id">
                                     <label>User name</label>
