--- a/src/app/layout/trading-automation/add-strategy-execution/add-strategy-execution.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/add-strategy-execution.component.html
@@ -66,6 +66,7 @@
                             <input name="counterCurrencyPercentForBuying" type="number" class="form-control"
                                    min="0.1"
                                    max="100" [value]="counterCurrencyFractionForBuying * 100"
+                                   step="0.1"
                                    (input)="onCounterCurrencyPercentForBuying($event.target)">
                             <div class="input-group-append">
                                 <span class="input-group-text">%</span>
@@ -79,6 +80,7 @@
                         <div class="input-group">
                             <input name="baseCurrencyPercentForSelling" type="number" class="form-control" min="0.1"
                                    max="100" [value]="baseCurrencyFractionForSelling * 100"
+                                   step="0.1"
                                    (input)="onBaseCurrencyPercentForSelling($event.target)">
                             <div class="input-group-append">
                                 <span class="input-group-text">%</span>
@@ -93,6 +95,7 @@
                             <input name="maxCounterCurrencyPercentForBuying" type="number" class="form-control"
                                    min="0.1"
                                    max="100" [value]="maxCounterCurrencyPercentForBuying"
+                                   step="0.1"
                                    (input)="onMaxCounterCurrencyPercentForBuying($event.target)">
                             <div class="input-group-append">
                                 <span class="input-group-text">%</span>
@@ -107,6 +110,7 @@
                             <input name="maxCounterCurrencyPercentForBuying" type="number" class="form-control"
                                    min="0.1"
                                    max="100" [value]="maxBaseCurrencyPercentForSelling"
+                                   step="0.1"
                                    (input)="onMaxBaseCurrencyPercentForSelling($event.target)">
                             <div class="input-group-append">
                                 <span class="input-group-text">%</span>
