--- a/src/app/layout/trading-automation/add-strategy-execution/buy-lower-and-lower-specific-parameters/buy-lower-and-lower-specific-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/buy-lower-and-lower-specific-parameters/buy-lower-and-lower-specific-parameters.component.html
@@ -2,16 +2,28 @@
     <div class="col-md-6">
         <div class="form-group">
             <label for="maxBuyPrice">Max buy price</label>
-            <input name="maxBuyPrice" type="number" class="form-control" min="0.00000001" max="9999999999"
-                   value="0.0" (input)="onMaxBuyPrice($event.target)" required>
+            <input name="maxBuyPrice"
+                   class="form-control"
+                   type="number"
+                   min="0.00000001"
+                   max="9999999999"
+                   value="0.0"
+                   (input)="onMaxBuyPrice($event.target)"
+                   required validateCurrencyPairSymbol>
         </div>
     </div>
     <div class="col-md-6">
         <div class="form-group">
             <label for="dropToBuyNextRelativePercent">Drop to buy next</label>
             <div class="input-group">
-                <input name="dropToBuyNextRelativePercent" class="form-control" type="number" min="0.1" max="50"
-                       value="0.5" step="0.1" (input)="onDropToBuyNextRelativePercent($event.target)" required>
+                <input name="dropToBuyNextRelativePercent" class="form-control"
+                       type="number"
+                       min="0.1"
+                       max="50"
+                       value="0.5"
+                       step="0.1"
+                       (input)="onDropToBuyNextRelativePercent($event.target)"
+                       required>
                 <div class="input-group-append">
                     <span class="input-group-text">%</span>
                 </div>
