--- a/src/app/layout/trading-automation/add-strategy-execution/sell-higher-and-higher-specific-parameters/sell-higher-and-higher-specific-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/sell-higher-and-higher-specific-parameters/sell-higher-and-higher-specific-parameters.component.html
@@ -10,8 +10,14 @@
         <div class="form-group">
             <label for="growToSellNextRelativePercent">Grow to sell next</label>
             <div class="input-group">
-                <input name="growToSellNextRelativePercent" class="form-control" type="number" min="0.1" max="50"
-                       value="0.5" step="0.1" (input)="onGrowToSellNextRelativePercent($event.target)">
+                <input name="growToSellNextRelativePercent"
+                       class="form-control"
+                       type="number"
+                       min="0.1"
+                       max="50"
+                       value="0.5"
+                       step="0.1"
+                       (input)="onGrowToSellNextRelativePercent($event.target)">
                 <div class="input-group-append">
                     <span class="input-group-text">%</span>
                 </div>
