Show only one button to refresh amounts and prices in wallet view

--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -13,17 +13,10 @@
             <div class="card-header d-flex flex-column">
                 <div class="d-flex flex-row mb-2">
                     <h3>{{ exchangeUser.name }}</h3>
-                    <div class="text-muted ml-auto mr-3"><small>Last amounts refresh: {{ getLastWalletRefreshTime(exchangeUser) |
+                    <div class="text-muted ml-auto mr-3"><small>Last refresh: {{ getLastWalletRefreshTime(exchangeUser) |
                         date: 'y-MM-dd HH:mm:ss' || '-' }}</small></div>
-                    <button class="btn btn-info" style="min-width: 170px;" (click)="fetchExchangeBalancesForExchangeUser(exchangeUser)" [disabled]="pending">
-                        <i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh amounts
-                    </button>
-                </div>
-                <div class="d-flex flex-row">
-                    <div class="text-muted ml-auto mr-3"><small>Last prices refresh: {{ getLastPriceRefreshTime() |
-                        date: 'y-MM-dd HH:mm:ss' || '-' }}</small></div>
-                    <button class="btn btn-info" style="min-width: 170px;" (click)="fetchPrices()" [disabled]="pendingPriceRefresh">
-                        <i class="fa fa-refresh" [class.is-pending]="pendingPriceRefresh"></i> Refresh prices
+                    <button class="btn btn-info" style="min-width: 170px;" (click)="refreshWallet(exchangeUser)" [disabled]="pending">
+                        <i class="fa fa-refresh" [class.is-pending]="pending"></i> Refresh wallets
                     </button>
                 </div>
             </div>
