Change 'Users & API keys' sidebar item to 'API keys'

--- a/src/app/layout/components/sidebar/sidebar.component.html
+++ b/src/app/layout/components/sidebar/sidebar.component.html
@@ -4,8 +4,8 @@
             <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'Dashboard' | translate }}
         </a>
 
-        <a routerLink="/exchange-users" [routerLinkActive]="['router-link-active']" class="list-group-item">
-            <i class="fa fa-fw fa-users"></i>&nbsp;{{ 'Users & API keys' | translate }}
+        <a routerLink="/api-keys" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-fw fa-key"></i>&nbsp;{{ 'API keys' | translate }}
         </a>
 
         <a routerLink="/wallets" [routerLinkActive]="['router-link-active']" class="list-group-item">
