--- a/src/app/layout/exchange-users/exchange-user-create/exchange-user-create.component.html
+++ b/src/app/layout/exchange-users/exchange-user-create/exchange-user-create.component.html
@@ -1,6 +1,6 @@
 <div>
     <app-page-header [heading]="'Add user'" [icon]="'fa-user'"
-                     [parents]="[ { heading: 'Exchange users', link: '/exchange-users', icon: 'users' } ]"></app-page-header>
+                     [parents]="[ { heading: 'Exchange users', link: '/api-keys', icon: 'users' } ]"></app-page-header>
 
     <form (ngSubmit)="onSubmit(createForm)" #createForm="ngForm">
         <div class="row">
