Validate strategy specific parameters before making a request

--- a/src/app/layout/trading-automation/add-strategy-execution/buy-lower-and-lower-specific-parameters/buy-lower-and-lower-specific-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/buy-lower-and-lower-specific-parameters/buy-lower-and-lower-specific-parameters.component.html
@@ -9,7 +9,7 @@
                    max="9999999999"
                    value="0.0"
                    (input)="onMaxBuyPrice($event.target)"
-                   required validateCurrencyPairSymbol>
+                   required>
         </div>
     </div>
     <div class="col-md-6">
