--- a/src/app/layout/trading-automation/add-strategy-execution/buy-now-parameters/buy-now-parameters.component.html
+++ b/src/app/layout/trading-automation/add-strategy-execution/buy-now-parameters/buy-now-parameters.component.html
@@ -2,8 +2,13 @@
     <div class="col-md-6">
         <div class="form-group">
             <label for="maxBuyPrice">Max buy price</label>
-            <input name="maxBuyPrice" type="number" class="form-control" min="0.00000001" max="9999999999"
-                   value="0.0" (input)="onMaxBuyPrice($event.target)" required>
+            <input name="maxBuyPrice"
+                   type="number"
+                   class="form-control"
+                   min="0.00000001"
+                   max="9999999999"
+                   value="0.0"
+                   (input)="onMaxBuyPrice($event.target)" required>
         </div>
     </div>
 </div>
